{
  "version": 4,
  "terraform_version": "1.9.3",
  "serial": 158,
  "lineage": "43e1686a-170a-2274-bbbd-30418874a94c",
  "resources": [
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/tom/providers/Microsoft.Network/publicIPAddresses/tom-bastion-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.232.250.91",
            "ip_version": "IPv4",
            "location": "eastus2",
            "name": "tom-bastion-public-ip",
            "resource_group_name": "tom",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.pilot",
            "module.vm_machine.azurerm_lb.load_balancer",
            "module.vm_machine.azurerm_lb_backend_address_pool.backend_pool",
            "module.vm_machine.azurerm_lb_nat_pool.lbnatpool",
            "module.vm_machine.azurerm_lb_probe.main",
            "module.vm_machine.azurerm_lb_rule.lbrule",
            "module.vm_machine.azurerm_monitor_autoscale_setting.autoscale",
            "module.vm_machine.azurerm_postgresql_server.psql",
            "module.vm_machine.azurerm_private_dns_a_record.postgresql",
            "module.vm_machine.azurerm_private_dns_zone.postgresql",
            "module.vm_machine.azurerm_private_dns_zone_virtual_network_link.Vnet_DNS",
            "module.vm_machine.azurerm_private_endpoint.psql_private_endpoint",
            "module.vm_machine.azurerm_public_ip.public_ip",
            "module.vm_machine.azurerm_virtual_machine_scale_set.vmss",
            "module.vm_machine.azurerm_virtual_machine_scale_set_extension.provision",
            "module.vpc.azurerm_nat_gateway.nat_gateway",
            "module.vpc.azurerm_network_security_group.nsg",
            "module.vpc.azurerm_network_security_rule.allow-http-8080",
            "module.vpc.azurerm_network_security_rule.allow_http",
            "module.vpc.azurerm_network_security_rule.allow_icmp",
            "module.vpc.azurerm_network_security_rule.allow_postgres",
            "module.vpc.azurerm_network_security_rule.allow_ssh",
            "module.vpc.azurerm_subnet.bastion_subnet",
            "module.vpc.azurerm_subnet.private_subnet_a",
            "module.vpc.azurerm_subnet.private_subnet_b",
            "module.vpc.azurerm_subnet.public_subnet",
            "module.vpc.azurerm_subnet_nat_gateway_association.public_subnet_nat_gateway",
            "module.vpc.azurerm_subnet_network_security_group_association.public_subnet_nsg_association",
            "module.vpc.azurerm_subnet_network_security_group_association.subnet_nsg_association",
            "module.vpc.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vm_machine",
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/tom/providers/Microsoft.Network/loadBalancers/tom-lb/frontendIPConfigurations/PublicIPAddress",
                "inbound_nat_rules": [
                  "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/tom/providers/Microsoft.Network/loadBalancers/tom-lb/inboundNatRules/ssh.1",
                  "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/tom/providers/Microsoft.Network/loadBalancers/tom-lb/inboundNatRules/ssh.3"
                ],
                "load_balancer_rules": [
                  "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/tom/providers/Microsoft.Network/loadBalancers/tom-lb/loadBalancingRules/http-rule"
                ],
                "name": "PublicIPAddress",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/tom/providers/Microsoft.Network/publicIPAddresses/tom-public-ip"
              }
            ],
            "id": "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/tom/providers/Microsoft.Network/loadBalancers/tom-lb",
            "location": "eastus2",
            "name": "tom-lb",
            "resource_group_name": "tom",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.pilot",
            "module.vm_machine.azurerm_public_ip.public_ip",
            "module.vpc.azurerm_nat_gateway.nat_gateway",
            "module.vpc.azurerm_network_security_group.nsg",
            "module.vpc.azurerm_network_security_rule.allow-http-8080",
            "module.vpc.azurerm_network_security_rule.allow_http",
            "module.vpc.azurerm_network_security_rule.allow_icmp",
            "module.vpc.azurerm_network_security_rule.allow_postgres",
            "module.vpc.azurerm_network_security_rule.allow_ssh",
            "module.vpc.azurerm_subnet.bastion_subnet",
            "module.vpc.azurerm_subnet.private_subnet_a",
            "module.vpc.azurerm_subnet.private_subnet_b",
            "module.vpc.azurerm_subnet.public_subnet",
            "module.vpc.azurerm_subnet_nat_gateway_association.public_subnet_nat_gateway",
            "module.vpc.azurerm_subnet_network_security_group_association.public_subnet_nsg_association",
            "module.vpc.azurerm_subnet_network_security_group_association.subnet_nsg_association",
            "module.vpc.azurerm_virtual_network.vnet"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vm_machine",
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "backend_pool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_ip_configurations": [
              "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/tom/providers/Microsoft.Compute/virtualMachineScaleSets/tom-scaleset/virtualMachines/1/networkInterfaces/ubuntu-vm-networkprofile/ipConfigurations/TestIPConfiguration",
              "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/tom/providers/Microsoft.Compute/virtualMachineScaleSets/tom-scaleset/virtualMachines/3/networkInterfaces/ubuntu-vm-networkprofile/ipConfigurations/TestIPConfiguration"
            ],
            "id": "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/tom/providers/Microsoft.Network/loadBalancers/tom-lb/backendAddressPools/BackendPool",
            "load_balancing_rules": [
              "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/tom/providers/Microsoft.Network/loadBalancers/tom-lb/loadBalancingRules/http-rule"
            ],
            "loadbalancer_id": "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/tom/providers/Microsoft.Network/loadBalancers/tom-lb",
            "name": "BackendPool"
          },
          "dependencies": [
            "azurerm_resource_group.pilot",
            "module.vm_machine.azurerm_lb.load_balancer",
            "module.vm_machine.azurerm_public_ip.public_ip",
            "module.vpc.azurerm_nat_gateway.nat_gateway",
            "module.vpc.azurerm_network_security_group.nsg",
            "module.vpc.azurerm_network_security_rule.allow-http-8080",
            "module.vpc.azurerm_network_security_rule.allow_http",
            "module.vpc.azurerm_network_security_rule.allow_icmp",
            "module.vpc.azurerm_network_security_rule.allow_postgres",
            "module.vpc.azurerm_network_security_rule.allow_ssh",
            "module.vpc.azurerm_subnet.bastion_subnet",
            "module.vpc.azurerm_subnet.private_subnet_a",
            "module.vpc.azurerm_subnet.private_subnet_b",
            "module.vpc.azurerm_subnet.public_subnet",
            "module.vpc.azurerm_subnet_nat_gateway_association.public_subnet_nat_gateway",
            "module.vpc.azurerm_subnet_network_security_group_association.public_subnet_nsg_association",
            "module.vpc.azurerm_subnet_network_security_group_association.subnet_nsg_association",
            "module.vpc.azurerm_virtual_network.vnet"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vm_machine",
      "mode": "managed",
      "type": "azurerm_lb_nat_pool",
      "name": "lbnatpool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_port": 22,
            "floating_ip_enabled": false,
            "frontend_ip_configuration_id": "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/tom/providers/Microsoft.Network/loadBalancers/tom-lb/frontendIPConfigurations/PublicIPAddress",
            "frontend_ip_configuration_name": "PublicIPAddress",
            "frontend_port_end": 50119,
            "frontend_port_start": 5000,
            "id": "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/tom/providers/Microsoft.Network/loadBalancers/tom-lb/inboundNatPools/ssh",
            "idle_timeout_in_minutes": 4,
            "loadbalancer_id": "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/tom/providers/Microsoft.Network/loadBalancers/tom-lb",
            "name": "ssh",
            "protocol": "Tcp",
            "resource_group_name": "tom",
            "tcp_reset_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.pilot",
            "module.vm_machine.azurerm_lb.load_balancer",
            "module.vm_machine.azurerm_public_ip.public_ip",
            "module.vpc.azurerm_nat_gateway.nat_gateway",
            "module.vpc.azurerm_network_security_group.nsg",
            "module.vpc.azurerm_network_security_rule.allow-http-8080",
            "module.vpc.azurerm_network_security_rule.allow_http",
            "module.vpc.azurerm_network_security_rule.allow_icmp",
            "module.vpc.azurerm_network_security_rule.allow_postgres",
            "module.vpc.azurerm_network_security_rule.allow_ssh",
            "module.vpc.azurerm_subnet.bastion_subnet",
            "module.vpc.azurerm_subnet.private_subnet_a",
            "module.vpc.azurerm_subnet.private_subnet_b",
            "module.vpc.azurerm_subnet.public_subnet",
            "module.vpc.azurerm_subnet_nat_gateway_association.public_subnet_nat_gateway",
            "module.vpc.azurerm_subnet_network_security_group_association.public_subnet_nsg_association",
            "module.vpc.azurerm_subnet_network_security_group_association.subnet_nsg_association",
            "module.vpc.azurerm_virtual_network.vnet"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vm_machine",
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/tom/providers/Microsoft.Network/loadBalancers/tom-lb/probes/http-probe",
            "interval_in_seconds": 15,
            "load_balancer_rules": [
              "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/tom/providers/Microsoft.Network/loadBalancers/tom-lb/loadBalancingRules/http-rule"
            ],
            "loadbalancer_id": "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/tom/providers/Microsoft.Network/loadBalancers/tom-lb",
            "name": "http-probe",
            "number_of_probes": 2,
            "port": 80,
            "probe_threshold": 1,
            "protocol": "Http",
            "request_path": "/health"
          },
          "dependencies": [
            "azurerm_resource_group.pilot",
            "module.vm_machine.azurerm_lb.load_balancer",
            "module.vm_machine.azurerm_public_ip.public_ip",
            "module.vpc.azurerm_nat_gateway.nat_gateway",
            "module.vpc.azurerm_network_security_group.nsg",
            "module.vpc.azurerm_network_security_rule.allow-http-8080",
            "module.vpc.azurerm_network_security_rule.allow_http",
            "module.vpc.azurerm_network_security_rule.allow_icmp",
            "module.vpc.azurerm_network_security_rule.allow_postgres",
            "module.vpc.azurerm_network_security_rule.allow_ssh",
            "module.vpc.azurerm_subnet.bastion_subnet",
            "module.vpc.azurerm_subnet.private_subnet_a",
            "module.vpc.azurerm_subnet.private_subnet_b",
            "module.vpc.azurerm_subnet.public_subnet",
            "module.vpc.azurerm_subnet_nat_gateway_association.public_subnet_nat_gateway",
            "module.vpc.azurerm_subnet_network_security_group_association.public_subnet_nsg_association",
            "module.vpc.azurerm_subnet_network_security_group_association.subnet_nsg_association",
            "module.vpc.azurerm_virtual_network.vnet"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vm_machine",
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "lbrule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/tom/providers/Microsoft.Network/loadBalancers/tom-lb/backendAddressPools/BackendPool"
            ],
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/tom/providers/Microsoft.Network/loadBalancers/tom-lb/frontendIPConfigurations/PublicIPAddress",
            "frontend_ip_configuration_name": "PublicIPAddress",
            "frontend_port": 80,
            "id": "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/tom/providers/Microsoft.Network/loadBalancers/tom-lb/loadBalancingRules/http-rule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/tom/providers/Microsoft.Network/loadBalancers/tom-lb",
            "name": "http-rule",
            "probe_id": "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/tom/providers/Microsoft.Network/loadBalancers/tom-lb/probes/http-probe",
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_resource_group.pilot",
            "module.vm_machine.azurerm_lb.load_balancer",
            "module.vm_machine.azurerm_lb_backend_address_pool.backend_pool",
            "module.vm_machine.azurerm_lb_probe.main",
            "module.vm_machine.azurerm_public_ip.public_ip",
            "module.vpc.azurerm_nat_gateway.nat_gateway",
            "module.vpc.azurerm_network_security_group.nsg",
            "module.vpc.azurerm_network_security_rule.allow-http-8080",
            "module.vpc.azurerm_network_security_rule.allow_http",
            "module.vpc.azurerm_network_security_rule.allow_icmp",
            "module.vpc.azurerm_network_security_rule.allow_postgres",
            "module.vpc.azurerm_network_security_rule.allow_ssh",
            "module.vpc.azurerm_subnet.bastion_subnet",
            "module.vpc.azurerm_subnet.private_subnet_a",
            "module.vpc.azurerm_subnet.private_subnet_b",
            "module.vpc.azurerm_subnet.public_subnet",
            "module.vpc.azurerm_subnet_nat_gateway_association.public_subnet_nat_gateway",
            "module.vpc.azurerm_subnet_network_security_group_association.public_subnet_nsg_association",
            "module.vpc.azurerm_subnet_network_security_group_association.subnet_nsg_association",
            "module.vpc.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vm_machine",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/tom/providers/Microsoft.Network/publicIPAddresses/tom-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.172.33.180",
            "ip_version": "IPv4",
            "location": "eastus2",
            "name": "tom-public-ip",
            "resource_group_name": "tom",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.pilot",
            "module.vpc.azurerm_nat_gateway.nat_gateway",
            "module.vpc.azurerm_network_security_group.nsg",
            "module.vpc.azurerm_network_security_rule.allow-http-8080",
            "module.vpc.azurerm_network_security_rule.allow_http",
            "module.vpc.azurerm_network_security_rule.allow_icmp",
            "module.vpc.azurerm_network_security_rule.allow_postgres",
            "module.vpc.azurerm_network_security_rule.allow_ssh",
            "module.vpc.azurerm_subnet.bastion_subnet",
            "module.vpc.azurerm_subnet.private_subnet_a",
            "module.vpc.azurerm_subnet.private_subnet_b",
            "module.vpc.azurerm_subnet.public_subnet",
            "module.vpc.azurerm_subnet_nat_gateway_association.public_subnet_nat_gateway",
            "module.vpc.azurerm_subnet_network_security_group_association.public_subnet_nsg_association",
            "module.vpc.azurerm_subnet_network_security_group_association.subnet_nsg_association",
            "module.vpc.azurerm_virtual_network.vnet"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "azurerm_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/tom/providers/Microsoft.Network/natGateways/tom-nat-gateway",
            "idle_timeout_in_minutes": 4,
            "location": "eastus2",
            "name": "tom-nat-gateway",
            "resource_group_name": "tom",
            "resource_guid": "1568152b-416c-4ca6-9d18-cc44f637ff82",
            "sku_name": "Standard"
          },
          "dependencies": [
            "azurerm_resource_group.pilot"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/tom/providers/Microsoft.Network/networkSecurityGroups/tom-nsg",
            "location": "eastus2",
            "name": "tom-nsg",
            "resource_group_name": "tom",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "22"
                ],
                "direction": "Inbound",
                "name": "allow_ssh",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "0.0.0.0/0"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "5432"
                ],
                "direction": "Inbound",
                "name": "allow_postgres",
                "priority": 1003,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "10.0.0.0/16"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "80"
                ],
                "direction": "Inbound",
                "name": "allow_http",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "0.0.0.0/0"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "8080"
                ],
                "direction": "Inbound",
                "name": "allow-http-8080",
                "priority": 1004,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "0.0.0.0/0"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow_icmp",
                "priority": 1000,
                "protocol": "Icmp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "10.0.0.0/16"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.pilot"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow-http-8080",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "",
            "destination_port_ranges": [
              "8080"
            ],
            "direction": "Inbound",
            "id": "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/tom/providers/Microsoft.Network/networkSecurityGroups/tom-nsg/securityRules/allow-http-8080",
            "name": "allow-http-8080",
            "network_security_group_name": "tom-nsg",
            "priority": 1004,
            "protocol": "Tcp",
            "resource_group_name": "tom",
            "source_address_prefix": "",
            "source_address_prefixes": [
              "0.0.0.0/0"
            ],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.pilot",
            "module.vpc.azurerm_network_security_group.nsg"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "",
            "destination_port_ranges": [
              "80"
            ],
            "direction": "Inbound",
            "id": "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/tom/providers/Microsoft.Network/networkSecurityGroups/tom-nsg/securityRules/allow_http",
            "name": "allow_http",
            "network_security_group_name": "tom-nsg",
            "priority": 1002,
            "protocol": "Tcp",
            "resource_group_name": "tom",
            "source_address_prefix": "",
            "source_address_prefixes": [
              "0.0.0.0/0"
            ],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.pilot",
            "module.vpc.azurerm_network_security_group.nsg"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/tom/providers/Microsoft.Network/networkSecurityGroups/tom-nsg/securityRules/allow_icmp",
            "name": "allow_icmp",
            "network_security_group_name": "tom-nsg",
            "priority": 1000,
            "protocol": "Icmp",
            "resource_group_name": "tom",
            "source_address_prefix": "",
            "source_address_prefixes": [
              "10.0.0.0/16"
            ],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.pilot",
            "module.vpc.azurerm_network_security_group.nsg"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_postgres",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "",
            "destination_port_ranges": [
              "5432"
            ],
            "direction": "Inbound",
            "id": "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/tom/providers/Microsoft.Network/networkSecurityGroups/tom-nsg/securityRules/allow_postgres",
            "name": "allow_postgres",
            "network_security_group_name": "tom-nsg",
            "priority": 1003,
            "protocol": "Tcp",
            "resource_group_name": "tom",
            "source_address_prefix": "",
            "source_address_prefixes": [
              "10.0.0.0/16"
            ],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.pilot",
            "module.vpc.azurerm_network_security_group.nsg"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "",
            "destination_port_ranges": [
              "22"
            ],
            "direction": "Inbound",
            "id": "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/tom/providers/Microsoft.Network/networkSecurityGroups/tom-nsg/securityRules/allow_ssh",
            "name": "allow_ssh",
            "network_security_group_name": "tom-nsg",
            "priority": 1001,
            "protocol": "Tcp",
            "resource_group_name": "tom",
            "source_address_prefix": "",
            "source_address_prefixes": [
              "0.0.0.0/0"
            ],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.pilot",
            "module.vpc.azurerm_network_security_group.nsg"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "bastion_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.4.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/tom/providers/Microsoft.Network/virtualNetworks/tomVNet/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "tom",
            "virtual_network_name": "tomVNet"
          },
          "dependencies": [
            "azurerm_resource_group.pilot",
            "module.vpc.azurerm_virtual_network.vnet"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "private_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/tom/providers/Microsoft.Network/virtualNetworks/tomVNet/subnets/privateSubnetA",
            "name": "privateSubnetA",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "tom",
            "virtual_network_name": "tomVNet"
          },
          "dependencies": [
            "azurerm_resource_group.pilot",
            "module.vpc.azurerm_virtual_network.vnet"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "private_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.3.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/tom/providers/Microsoft.Network/virtualNetworks/tomVNet/subnets/privateSubnetB",
            "name": "privateSubnetB",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "tom",
            "virtual_network_name": "tomVNet"
          },
          "dependencies": [
            "azurerm_resource_group.pilot",
            "module.vpc.azurerm_virtual_network.vnet"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/tom/providers/Microsoft.Network/virtualNetworks/tomVNet/subnets/publicSubnet",
            "name": "publicSubnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "tom",
            "virtual_network_name": "tomVNet"
          },
          "dependencies": [
            "azurerm_resource_group.pilot",
            "module.vpc.azurerm_virtual_network.vnet"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "azurerm_subnet_nat_gateway_association",
      "name": "public_subnet_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/tom/providers/Microsoft.Network/virtualNetworks/tomVNet/subnets/publicSubnet",
            "nat_gateway_id": "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/tom/providers/Microsoft.Network/natGateways/tom-nat-gateway",
            "subnet_id": "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/tom/providers/Microsoft.Network/virtualNetworks/tomVNet/subnets/publicSubnet"
          },
          "dependencies": [
            "azurerm_resource_group.pilot",
            "module.vpc.azurerm_nat_gateway.nat_gateway",
            "module.vpc.azurerm_subnet.public_subnet",
            "module.vpc.azurerm_virtual_network.vnet"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "public_subnet_nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/tom/providers/Microsoft.Network/virtualNetworks/tomVNet/subnets/publicSubnet",
            "network_security_group_id": "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/tom/providers/Microsoft.Network/networkSecurityGroups/tom-nsg",
            "subnet_id": "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/tom/providers/Microsoft.Network/virtualNetworks/tomVNet/subnets/publicSubnet"
          },
          "dependencies": [
            "azurerm_resource_group.pilot",
            "module.vpc.azurerm_network_security_group.nsg",
            "module.vpc.azurerm_subnet.public_subnet",
            "module.vpc.azurerm_virtual_network.vnet"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "subnet_nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/tom/providers/Microsoft.Network/virtualNetworks/tomVNet/subnets/privateSubnetA",
            "network_security_group_id": "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/tom/providers/Microsoft.Network/networkSecurityGroups/tom-nsg",
            "subnet_id": "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/tom/providers/Microsoft.Network/virtualNetworks/tomVNet/subnets/privateSubnetA"
          },
          "dependencies": [
            "azurerm_resource_group.pilot",
            "module.vpc.azurerm_network_security_group.nsg",
            "module.vpc.azurerm_subnet.private_subnet_a",
            "module.vpc.azurerm_virtual_network.vnet"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "a6855b32-c7eb-45fa-b6b8-868781e1adf6",
            "id": "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/tom/providers/Microsoft.Network/virtualNetworks/tomVNet",
            "location": "eastus2",
            "name": "tomVNet",
            "resource_group_name": "tom",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/tom/providers/Microsoft.Network/virtualNetworks/tomVNet/subnets/publicSubnet",
                "name": "publicSubnet",
                "security_group": "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/tom/providers/Microsoft.Network/networkSecurityGroups/tom-nsg"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/tom/providers/Microsoft.Network/virtualNetworks/tomVNet/subnets/privateSubnetA",
                "name": "privateSubnetA",
                "security_group": "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/tom/providers/Microsoft.Network/networkSecurityGroups/tom-nsg"
              },
              {
                "address_prefix": "10.0.3.0/24",
                "id": "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/tom/providers/Microsoft.Network/virtualNetworks/tomVNet/subnets/privateSubnetB",
                "name": "privateSubnetB"
              },
              {
                "address_prefix": "10.0.4.0/24",
                "id": "/subscriptions/7f893e89-42a4-46c1-97b0-ec4fe898f93e/resourceGroups/tom/providers/Microsoft.Network/virtualNetworks/tomVNet/subnets/AzureBastionSubnet",
                "name": "AzureBastionSubnet"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.pilot"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}